Fix top menu overflowing

--- a/admin/src/style/Canvas.css
+++ b/admin/src/style/Canvas.css
@@ -76,6 +76,7 @@
   background: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  box-sizing: border-box;
   visibility: hidden;
   justify-content: center;
   align-items: center;
